# auth/internal/model/data/loginreq.go
@@ -1,0 +1,6 @@
+package data
+
+type LoginRequest struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
