# auth/internal/model/data/loginres.go
@@ -1,0 +1,8 @@
+package data
+
+import "github.com/nibir30/go-microservices/auth/internal/model"
+
+type LoginResponse struct {
+	User  model.User `json:"user"`
+	Token string     `json:"token"`
+}
