# auth/internal/model/user.go
@@ -4,6 +4,7 @@ import "time"
 
 type User struct {
 	ID               uint       `gorm:"primaryKey" json:"id"`
+	Username         string     `gorm:"size:255;unique;not null" json:"username"`
 	FirstName        string     `gorm:"size:255;not null" json:"firstName"`
 	LastName         string     `gorm:"size:255;not null" json:"lastName"`
 	Email            string     `gorm:"size:255;unique;not null" json:"email"`
@@ -12,8 +13,7 @@ type User struct {
 	DOB              *time.Time `gorm:"type:date" json:"dob,omitempty"`
 	RegistrationDate *time.Time `gorm:"type:date" json:"registrationDate,omitempty"`
 	EmailVerifiedYn  string     `gorm:"not null" json:"emailVerifiedYn"`
-	CreatedAt        *time.Time `json:"-"` // Ignore in JSON
-	UpdatedAt        *time.Time `json:"-"` // Ignore in JSON
+	CreatedAt        *time.Time `json:"-"`              // Ignore in JSON
+	UpdatedAt        *time.Time `json:"-"`              // Ignore in JSON
 	DeletedAt        *time.Time `gorm:"index" json:"-"` // Ignore in JSON
 }
-
